--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpstan/phpstan": "^0.11.5 || ^0.12.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/var-dumper": "^4.2 || ^5.0"
+        "symfony/var-dumper": "^4.2 || ^5.0",
+        "mikey179/vfsstream": "^1.6"
     },
     "autoload": {
         "psr-4": {
